Fix/insights fe fixes (#352)
* Add scroll overflow for when desktop navigation is too long

* Refactor code to use rem units

* Fix sizing issues

--- a/sass/includes/_jumplinks.scss
+++ b/sass/includes/_jumplinks.scss
@@ -2,6 +2,8 @@
   position: sticky;
   top: 0;
   padding: 2.5rem 0 0 1rem;
+  height: 100vh;
+  overflow: scroll;
 
   &__heading {
     font-size: 2rem;
@@ -37,7 +39,7 @@
     }
   }
   
-  @media (max-width: 767px) {
+  @media (max-width: $screen__md) {
     display: none;
   }
 }
